fix: resolve 'Failed to launch JVM' with explicit jlink + --runtime-image
- Root cause: jpackage's internal jlink on JDK 26 skips generating
  java.exe/javaw.exe in runtime/bin, causing ThorCash.exe to fail
- Fix: use explicit jlink to create runtime, then pass it via
  --runtime-image to jpackage — verified java.exe + javaw.exe present
- Rewrite build-installer.bat into 9-stage pipeline with error handling
- Add maven-jlink-plugin and resource filtering to pom.xml
- Add extract-javafx-dlls.ps1 for JavaFX native DLL extraction